--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>jp.ikedam.jenkins.plugins</groupId>
   <artifactId>scoring-load-balancer</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2.5</version>
   <packaging>hpi</packaging>
   <name>Scoring Load Balancer</name>
   <description>Decides a build run on which node by scoring nodes.</description>
@@ -37,9 +37,9 @@
   </licenses>
   
   <properties>
-    <jenkins.version>1.466</jenkins.version>
-    <jenkins-test-harness.version>1.466</jenkins-test-harness.version>
-    <java.level>5</java.level>
+    <jenkins.version>1.568</jenkins.version>
+    <jenkins-test-harness.version>1.568</jenkins-test-harness.version>
+    <java.level>6</java.level>
   </properties>
 
   <build>
